[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "issue-grooming-env"
version = "0.1.0"
description = "An RL environment for grooming GitHub issues"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "server*"]